# slachamberheater

./: .gitignore  .gitmodules  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: kibot_gen_full_outputs.yaml  kibot_gen_review_gerbers.yaml  kibot_gen_schematic_outputs.yaml
cad/: STR-21-007-Resin_Heater--30mm_Axial_Fan.stl  STR-21-007-Resin_Heater--Inlet_housing.lys  STR-21-007-Resin_Heater--Inlet_housing.stl  STR-21-007-Resin_Heater--M3 bolt and grooved nut tool.stl  STR-21-007-Resin_Heater--Reference(M3 Nut Tool).stl  STR-21-007-Resin_Heater--Resin_Heater.stl  STR-21-007-Resin_Heater--master_heater.lys  STR-21-007-Resin_Heater--master_heater.pws  STR-21-007-Resin_Heater--master_heater.stl  STR-21-007-Resin_Heater.20220611-114642.FCBak  STR-21-007-Resin_Heater.20220611-122209.FCBak  STR-21-007-Resin_Heater.20220611-134732.FCBak  STR-21-007-Resin_Heater.FCStd
cad/Parts/: 30mmFan.FCStd  Bolts and nuts holes.FCStd  fan_30mm_axial.step
cad/STR-21-007-Resin_Heater--Inlet_housing_autosave/: STR-21-007-Resin_Heater--Inlet_housing_2021-10-09_20-45-10.lyt  STR-21-007-Resin_Heater--Inlet_housing_2021-10-24_14-06-42.lyt  STR-21-007-Resin_Heater--Inlet_housing_2022-02-16_20-11-19.lyt  (+1 more)
diagrams/: System Block Diagram.drawio
docs/: index.md
hardware/: .gitignore  Analogue.kicad_sch  Heater.kicad_sch  MCU.kicad_sch  Power.kicad_sch  STR-21-007-SLAChamberHeater.kicad_pcb  STR-21-007-SLAChamberHeater.kicad_prl  STR-21-007-SLAChamberHeater.kicad_pro  STR-21-007-SLAChamberHeater.kicad_sch  UI.kicad_sch  fp-lib-table  sym-lib-table
spice_models/: heater.asc  heater.plt
(+50 files in other folders)
